--- a/public_html/css/post.css
+++ b/public_html/css/post.css
@@ -1,34 +1,3 @@
-.post-type-image .object-wrapper {
-	max-width: 100%;
-	position: relative;
-}
-.post-type-image .object-wrapper img {
-	position: absolute;
-	width: 100%;
-	height: 100%;
-}
-
-.post-type-youtube .object-wrapper {
-	max-width: 800px;
-	position: relative;
-}
-.post-type-youtube .object-wrapper .padding-fix {
-	padding-bottom: 75%;
-}
-.post-type-youtube .object-wrapper iframe {
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	border: 0;
-}
-
-.post-type-video .object-wrapper {
-	max-width: 100%;
-}
-.post-type-video .object-wrapper video {
-	width: 100%;
-}
-
 #post-current-search-wrapper {
 	text-align: center;
 }
@@ -195,6 +164,25 @@
 	position: relative;
 	margin-bottom: 0.5em;
 }
+.post-content .object-wrapper {
+	max-width: 100%;
+	position: relative;
+}
+.post-content .object-wrapper img,
+.post-content .object-wrapper object,
+.post-content .object-wrapper iframe,
+.post-content .object-wrapper video {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	left: 0;
+	top: 0;
+	border: 0;
+}
+.post-content .object-wrapper video {
+	background: black;
+}
+
 .post-notes-target {
 	position: absolute;
 	pointer-events: none;
